Use checkbox for toggle

--- a/accelerator.yaml
+++ b/accelerator.yaml
@@ -17,7 +17,7 @@ accelerator:
     label: Dockerfile
     description: Include a Dockerfile
     dataType: boolean
-    inputType: toggle
+    inputType: checkbox
     defaultValue: false
     required: true
 engine:
