--- a/config/workload.yaml
+++ b/config/workload.yaml
@@ -1,13 +1,15 @@
 apiVersion: carto.run/v1alpha1
 kind: Workload
 metadata:
-  name: sample-app
+  name: tanzu-csharp-web-app
+  namespace: dev
   labels:
     apps.tanzu.vmware.com/workload-type: web
-    app.kubernetes.io/part-of: sample-app
+    app.kubernetes.io/part-of: tanzu-csharp-web-app
+#    apps.tanzu.vmware.com/has-tests: "true"
 spec:
   source:
     git:
-      url: https://github.com/sample-accelerators/steeltoe-weatherforecast
+      url: https://github.com/gorkemozlu/steeltoe-weatherforecast
       ref:
         branch: main
