Add info for deploying to cloud foundry
Co-authored-by: Chris Cheetham <chris@cheetham.com>

Co-authored-by: Thomas Risberg <trisberg@pivotal.io>

--- a/accelerator.yaml
+++ b/accelerator.yaml
@@ -7,6 +7,7 @@ accelerator:
   - c#
   - steeltoe
   - tanzu
+  - cloud-foundry
 
   options:
   - name: applicationName
@@ -35,3 +36,5 @@ engine:
       substitutions:
       - text: sample-app
         with: "#artifactId.toLowerCase()"
+      - text: Sample
+        with: "#applicationName"
