--- a/config/workload.yaml
+++ b/config/workload.yaml
@@ -5,6 +5,9 @@ metadata:
   labels:
     apps.tanzu.vmware.com/workload-type: web
     app.kubernetes.io/part-of: sample-app
+    tanzu.app.live.view: true
+    tanzu.app.live.view.application.flavours: steeltoe
+    tanzu.app.live.view.application.name: steeltoe-weatherforecast    
 spec:
   source:
     git:
