Add static pages to build
Fixes #9.

--- a/Sample.csproj
+++ b/Sample.csproj
@@ -21,4 +21,10 @@
     <PackageReference Include="Steeltoe.Management.TracingCore" Version="$(SteeltoeVersion)" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Include="StaticFiles/**/*">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
